--- a/src/app/views/home/home.component.html
+++ b/src/app/views/home/home.component.html
@@ -17,7 +17,7 @@
         <p>@RennanEckhardt</p>
         <br>
         <br>
-        <a class="link" href="www.linkedin.com/in/rennaneckhardt">
+        <a class="link" href="https://www.linkedin.com/in/rennaneckhardt">
             <img class="logo" src="assets/imagens/logo_linkedin.png" alt="logo"> 
         </a>
         <p>@RennanEckhardt</p>
